# MAC_Calculator

./: CMakeLists.txt  README.md  calculator.c  calculator.h  console_ui.c  console_ui.h  gtk_ui.c  gtk_ui.h  main.c  operation.c  operation.h  ui.h  unit_test_ui.c  unit_test_ui.h
images/: 系統架構圖.drawio
